fixing layout issue

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -11,7 +11,7 @@
     font-size: 1.4rem;
     height: 7rem;
     background-color: var(--color-white);
-    border-radius: var(--color-grey-light-2);
+    border-bottom: 1px solid var(--color-grey-light-2);
 
     display: flex;
     justify-content: space-between;
@@ -36,7 +36,6 @@
     background-color: var(--color-white);
 
     // TEST
-    background-color: orangered;
     min-height: 80rem;
 
     // all remaining place, so we let grow
